--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "url": "https://github.com/mohayonao/frame-sequencer/issues"
   },
   "dependencies": {
-    "@mohayonao/append-if-not-exists": "^1.0.0",
-    "@mohayonao/defaults": "^1.0.0",
     "@mohayonao/event-emitter": "^1.0.1",
-    "@mohayonao/remove-if-exists": "^1.0.0"
+    "@mohayonao/utils": "^0.1.1"
   },
   "devDependencies": {
     "babel": "^5.8.21",
